--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Socio">
-        <activity android:name=".CreatePostActivity"></activity>
-        <activity android:name=".SignInActivity">
+        <activity android:name=".SplashScreen" android:theme="@style/SplashScreenBackground">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SignInActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".CreatePostActivity" />
     </application>
 
 </manifest>
